--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
                         <div class="tv">
                             <h2>OLED</h2>
                             <p>Los televisores más evolucionados del mercado</p>
-                            <img src="src/img/OLED97G4-V3.png" alt="">
+                            <a href="#" onclick="showDetails(1)"><img src="src/img/OLED97G4-V3.png" alt=""></a>
                             <a href="#" class="btn" onclick="showDetails(1)">Ver tecnología</a>
                         </div>
                         <div class="tv">
                             <h2>QNED</h2>
                             <p>Accesibilidad de contenidos y diversidad de tamaños</p>
-                            <img src="src/img/75QNED90-V3.png" alt="">
+                            <a href="#" onclick="showDetails(2)"><img src="src/img/75QNED90-V3.png" alt=""></a>
                             <a href="#" class="btn" onclick="showDetails(2)">Ver tecnología</a>
                         </div>
                         <div class="tv">
                             <h2>NanoCell</h2>
                             <p>La mejor relación en calidad de imagen y precio</p>
-                            <img src="src/img/65NANO80-V3.png" alt="">
+                            <a href="#" onclick="showDetails(3)"><img src="src/img/65NANO80-V3.png" alt=""></a>
                             <a href="#" class="btn" onclick="showDetails(3)">Ver tecnología</a>
                         </div>
                         <div class="tv">
                             <h2>UHD</h2>
                             <p>La mayor precisión de imagen y luminancia</p>
-                            <img src="src/img/65UT8050-V3.png" alt="">
+                            <a href="#" onclick="showDetails(4)"><img src="src/img/65UT8050-V3.png" alt=""></a>
                             <a href="#" class="btn" onclick="showDetails(4)">Ver tecnología</a>
                         </div>
                     </div>
